################################################################################
#    GIPS: Geospatial Image Processing System
#
#    Copyright (C) 2014 Matthew A Hanson
#
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program. If not, see <http://www.gnu.org/licenses/>
################################################################################
v0.7.1
- Better internal handling of sensors for data where there can be multiple sensors on a single day
- Tile projects (no shapefile or nomosaic set) now creates subdirectories for each tile in project folder
- Project inventories (gips_project inventory) doesn't fail if directory has extraneous files
- datadir option added back allowing saving of files into specified directory

New functionality
- 'gips_project stack' for creating stacks of products in a GIPS project directory
- added mapreduce utilities for multiprocessing
- added 'nomosaic' option to project, which will keep the data as tiles (but still warp)

AOD
- fixed retrieval of Aerosol Optical Depth from MOD08 data

MODIS
- fixed segfault in indices and cleaned up extraneous printing
- fixed nodata value in ndvi8 product

v0.7.0
- Refactoring of inventory classes and printing
- Renaming of products to replace underscores (_) with dashes (-) in the product name
- Addition of gips_project script (print inventory, create browse images)