@@ -1,8 +1,11 @@
 #!/usr/bin/env python
 ################################################################################
-#    GIPPY: Geospatial Image Processing library for Python
+#    GIPS: Geospatial Image Processing System
 #
-#    Copyright (C) 2014 Matthew A Hanson
+#    AUTHOR: Matthew Hanson
+#    EMAIL:  mhanson@ags.io
+#
+#    Copyright (C) 2014 Applied Geosolutions
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
