@@ -2,7 +2,10 @@
 ################################################################################
 #    GIPS: Geospatial Image Processing System
 #
-#    Copyright (C) 2014 Matthew A Hanson
+#    AUTHOR: Matthew Hanson
+#    EMAIL:  mhanson@ags.io
+#
+#    Copyright (C) 2014 Applied Geosolutions
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
