@@ -1,7 +1,10 @@
 ################################################################################
 #    GIPS: Geospatial Image Processing System
 #
-#    Copyright (C) 2014 Matthew A Hanson
+#    AUTHOR: Matthew Hanson
+#    EMAIL:  mhanson@ags.io
+#
+#    Copyright (C) 2014 Applied Geosolutions
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -16,6 +19,7 @@
 #   You should have received a copy of the GNU General Public License
 #   along with this program. If not, see <http://www.gnu.org/licenses/>
 ################################################################################
+
 v0.7.1
 - Better internal handling of sensors for data where there can be multiple sensors on a single day
 - Tile projects (no shapefile or nomosaic set) now creates subdirectories for each tile in project folder
